<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ckt.cyclereboot.CycleRebootMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/timeslLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cycle_times_text"
            android:id="@+id/times"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:minWidth="80dp"
            android:inputType="number"
            android:hint="input times"
            android:id="@+id/time_edit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:text="@string/ok_button_text"
            android:id="@+id/ok"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cycledlayout"
        android:layout_margin="@dimen/layout_margin"
        android:layout_below="@+id/timeslLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cycled_text"
            android:id="@+id/cycled"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/cycledtimes"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/remainlayout"
        android:layout_margin="@dimen/layout_margin"
        android:layout_below="@+id/cycledlayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/remain_text"
            android:id="@+id/remain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/remaintimes"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totallayout"
        android:layout_margin="@dimen/layout_margin"
        android:layout_below="@+id/remainlayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total_text"
            android:id="@+id/total"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totaltimes"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/failedlayout"
        android:layout_margin="@dimen/layout_margin"
        android:layout_below="@+id/totallayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/failed_text"
            android:id="@+id/failed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/failedtimes"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_item_margin"
        android:id="@+id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:text="@string/start_button_text"
            android:id="@+id/start"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_item_margin"
            android:text="@string/report_button_text"
            android:visibility="gone"
            android:id="@+id/report"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_item_margin"
        android:layout_below="@id/failedlayout"
        android:layout_above="@id/buttons">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sim_state_string_scanning"
            android:id="@+id/simstatetextview"
            />

    </ScrollView>
</RelativeLayout>
